1. Added client-side validation using HTML and javascript for all input types 2. Added some CSS functionalities

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                                <input type="tel" name="phone" id="phone" placeholder="PHONE NUMBER" required>
                            </section>
                            <section>
-                               <input type="password" name="password" id="password" placeholder="PASSWORD" required>
-                               <input type="password" name="confirmPassword" id="confirmPassword" placeholder="CONFIRM PASSWORD" required>
+                               <input type="password" name="password" id="password" minlength="8" placeholder="PASSWORD" required>
+                               <input type="password" name="confirmPassword" id="confirmPassword" minlength="8" placeholder="CONFIRM PASSWORD" required>
                            </section>
                        </fieldset>
                    </div>
                    <div class="submit">
-                       <button type="submit">Create Account</button>
+                       <button type="submit" class="btn">Create Account</button>
                        <p>Already have an account?  <a href="">Log In</a></p>
                    </div>
                </div>
